# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2015/day_02/: AoC.py
2015/day_03/: AoC.py  test.txt
2015/day_04/: AoC.py
2015/day_05/: AoC.py
2015/day_06/: AoC.py  test.txt
2015/day_07/: AoC.py  test.txt
2015/day_08/: AoC.py
2015/day_09/: AoC.py
2015/day_10/: AoC.py
2015/day_11/: AoC.py
2015/day_12/: AoC.py  test.txt
2015/day_13/: AoC.py
2015/day_14/: AoC.py
2015/day_15/: AoC.py
2015/day_16/: AoC.py  test.txt
2015/day_17/: AoC.py
2015/day_18/: AoC.py
2015/day_19/: AoC.py
2015/day_20/: AoC.py
2015/day_21/: AoC.py
2015/day_22/: AoC.py  test.py
2015/day_23/: AoC.py  test.txt
2015/day_24/: AoC.py  test.txt
2015/day_25/: AoC.py
2016/day_01/: AoC.py  temp.py  test.txt
2016/day_02/: AoC.py
2016/day_03/: AoC.py
2016/day_04/: AoC.py  test.txt
2016/day_05/: AoC.py
2016/day_06/: AoC.py
2016/day_07/: AoC.py  test.txt
2016/day_08/: AoC.py  test.txt
2016/day_09/: AoC.py
2016/day_10/: AoC.py
2016/day_11/: AoC.py
2016/day_12/: AoC.py
2016/day_13/: AoC.py
2016/day_14/: AoC.py
2016/day_15/: AoC.py
2016/day_16/: AoC.py
2016/day_17/: AoC.py
2016/day_18/: AoC.py
2016/day_19/: AoC.py
2017/day_01/: AoC.py
2017/day_02/: AoC.py
2017/day_03/: AoC.py
2017/day_04/: AoC.py
2017/day_05/: AoC.py
2017/day_06/: AoC.py
2017/day_07/: AoC.py
day1/: AoC1.ipynb
day10/: AoC10.ipynb
day13/: AoC13.ipynb
day2/: AoC2.ipynb
day4/: AoC4.ipynb
day6/: AoC6.ipynb
day8/: AoC8.ipynb
(+72 files in other folders)
