[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.4"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
scipy = "^1.14.1"
browser-cookie3 = "^0.19.1"
scikit-spatial = "^8.0.0"
pre-commit = "^4.0.1"
black = "^24.10.0"
commitizen = "^4.0.0"
mypy = "^1.13.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
